[tool.poetry]
name = "habit-tracker"
version = "0.1.0"
description = "A web app for habit tracking."
authors = ["nemishmehta <23.nemishmehta@gmail.com>"]
readme = "README.md"
packages = [{include = "habit_tracker"}]

[tool.poetry.dependencies]
python = ">=3.9,<3.9.7 || >3.9.7,<4.0"
streamlit = "^1.14.0"
psycopg2 = "^2.9.5"
email-validator = "^1.3.0"
altair = "^4.2.0"
plotly = "^5.11.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
